# gtkmm-template

./: CMakeLists.txt  build-debian-x64.py  build-mingw-x64.py  build-native.py  copy_deps.py  copy_deps_win.py  get-gtk.sh  pkgconf.py  readme.md
